--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   ],
   "peerDependencies": {
     "react-native": ">=0.43.0",
+    "deprecated-react-native-prop-types": "^2.3.0",
     "prop-types": ">=15.5.7"
   },
   "devDependencies": {
